refactor: 응답 변환 로직 개선